# bobac3_ws

./: .gitignore  .gitmodules  README.md
scripts/: 100-reinovo-bobac3.rules  base_control.sh  collect_data.py  install.sh  random_spawn.py  reinovo_bobac3.rules  setup_wifi_ap.sh  test_all_cameras.sh  test_base.sh  test_berxel.sh  test_lidar.sh  test_normal_video.sh  (+4 more)
src/ar_pose/: CMakeLists.txt  package.xml  readme.md
src/ar_pose/cam_info/: base_camera.yaml  hand_camera.yaml  head_camera.yaml
src/ar_pose/config/: bobac3.yaml  oryxbotsim.yaml
src/ar_pose/launch/: ar_base.launch  ar_base_sim.launch  ar_hand.launch  ar_hand_sim.launch  usbcam_base.launch  usbcam_hand.launch  usbcam_head.launch
src/ar_pose/src/: PoseAdjust.cpp  PoseAdjust.h  ros_node.cpp
src/ar_pose/srv/: Track.srv
src/auto_charging/: CMakeLists.txt  package.xml  readme.md
src/auto_charging/include/auto_charging/: auto_charging.h
src/auto_charging/launch/: auto_charging.launch
src/auto_charging/src/: auto_charging.cpp  ros_node.cpp
src/auto_charging/srv/: SetCharge.srv
src/bobac3_description/: CMakeLists.txt  package.xml  readme.md
src/bobac3_description/launch/: display.launch  gazebo.launch
src/bobac3_description/world/: reinovo_2025reicom_bobac3.world  reinovo_2025reicom_bobac3（复件）.world  reinovo_raicom.world  reinovo_raicom_final.world
src/bobac3_description/xacro/: basic_kit.xacro  bobac3_arm.xacro  bobac3_base.xacro  bobac3_me6.xacro  bobac3_serverbot.xacro  gazebo_plugin.xacro  model.sdf  pigot_arm_model.xacro  pigot_trans.xacro
src/bobac3_navigation/: CMakeLists.txt  package.xml
src/bobac3_navigation/launch/: amcl.launch  bobac3_nav_2d.launch  cartographer.launch  cartographer_sim.launch  demo_nav_2d.launch  map_server.launch  move_base.launch  move_base_sim.launch
src/bobac3_navigation/maps/: test1.pgm
src/bobac3_navigation/param/: costmap_common_params.yaml  costmap_common_params_global.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
src/bobac3_navigation/param/sim/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
src/bobac3_navigation/rviz/: robot_navigation.rviz
src/face_rec/: CMakeLists.txt  README.md  package.xml
src/face_rec/launch/: encode_face.launch  face_detection.launch  face_rec_topic.launch  face_verification.launch
src/face_rec/msg/: face_results.msg
src/face_rec/scripts/: encode_face.py  face_detection.py  face_rec_topic.py  face_verification.py
src/face_rec/srv/: recognition_results.srv
src/face_rec/tutorials/: 人脸检测与识别.docx
src/map_manager/: CMakeLists.txt  package.xml
src/map_manager/launch/: cartographer_save.launch  gmapping_save.launch  map_load.launch  map_save.launch  pbstream_to_map.launch
src/map_manager/maps/: map.pgm  map.yaml
src/map_manager/src/: cartographer_map_save.cpp
src/pid_lib/: CMakeLists.txt  package.xml
src/pid_lib/include/pid_lib/: pid.h  rei_print.h
src/rei_lidar_fuse/: CHANGELOG.md  CMakeLists.txt  nodelet_lidar_fuse.xml  package.xml
src/rei_lidar_fuse/include/rei_lidar_fuse/: lidar_fuse_nodelet.h
src/rei_lidar_fuse/launch/: example.launch  example_cs.launch
src/rei_lidar_fuse/src/: lidar_fuse_nodelet.cpp
src/rei_robot_base/: CMakeLists.txt  package.xml
src/rei_robot_base/config/: bobac3.yaml  fox_diff.yaml  fox_mecanum.yaml  fox_three.yaml  oryxbot.yaml
src/rei_robot_base/include/rei_robot_base/: rei_robot_base.h
src/rei_robot_base/include/rei_robot_base/communication/: rei_base_communication.h
src/rei_robot_base/include/rei_robot_base/kinematics/: diff_kinematics.h  kinematics.h  kinematics_factory.h  mecanum_box_kinematics.h  three_omni_kinematics.h
src/rei_robot_base/launch/: base.launch
src/rei_robot_base/msg/: BumperCliff.msg  CarData.msg  MotorCmd.msg
src/rei_robot_base/src/: rei_robot_base.cpp  ros_node.cpp
src/rei_robot_base/src/communication/: rei_base_communication.cpp
src/rei_robot_base/src/kinematics/: diff_kinematics.cpp  mecanum_box_kinematics.cpp  three_omni_kinematics.cpp
src/rei_robot_base/srv/: CtrlMode.srv  SetIO.srv
src/rei_robot_cruise/: CMakeLists.txt  README.md  package.xml
src/rei_robot_cruise/include/rei_robot_cruise/: cruise.h
src/rei_robot_cruise/launch/: example.launch
src/rei_robot_cruise/msg/: NavGoal.msg
src/rei_robot_cruise/params/: position.json  position.yaml
src/rei_robot_cruise/src/: cruise.cpp
src/rei_robot_cruise/srv/: LoadTask.srv  RemoveGoal.srv  SetGoals.srv  SetNavOrder.srv  StartStopNav.srv
src/rei_robot_cruise/test/: example.cpp
src/relative_move/: CMakeLists.txt  package.xml  readme.md
src/relative_move/launch/: relative_move.launch
src/relative_move/src/: RelativeMove.cpp  RelativeMove.h  ros_node.cpp
src/relative_move/srv/: SetRelativeMove.srv
src/robot_audio/: CMakeLists.txt  README.txt  package.xml
src/robot_audio/AIUI/assets/vtn/: vtn.ini
src/robot_audio/AIUI/cfg/: aiui.cfg
src/robot_audio/AIUI/msc/d89a68cb5c039e590043e06af50796f9/local.5.6.1070.0000/: local.cache
src/robot_audio/AIUI/msc/d89a68cb5c039e590043e06af50796f9/ns.5.6.1070.0000/: ns.cache
src/robot_audio/launch/: voice_aiui.launch  voice_awake.launch  voice_collect.launch  voice_control.launch  voice_interaction.launch  voice_nav.launch
src/robot_audio/src/: interaction.cpp  robot_aiui.cpp
src/robot_audio/src/rei_aiui/: reinovo_voice.cpp  reinovo_voice.h
src/robot_audio/src/voice_awake/: voice_awake.cpp
src/robot_audio/src/voice_collect/: audio_collect.cpp  audio_collect.h  ros_wrapper.cpp  ros_wrapper.h  vad.cpp  vad.h
src/robot_audio/src/voice_control/: voice_control.cpp  voice_control.h
src/robot_audio/src/voice_nav/: voice_nav.cpp  voice_nav.h
src/robot_audio/src/zbase64/: zbase64.cpp  zbase64.h
src/robot_joy/: CHANGELOG.md  CMakeLists.txt  package.xml  readme.md
src/robot_joy/include/robot_joy/: robot_joy.h
src/robot_joy/launch/: robot_joy.launch
src/robot_joy/src/: robot_joy.cpp  robot_joy_node.cpp
(+70 files in other folders)
