<?xml version="1.0"?>
<package format="2">
  <name>ar_pose</name>
  <version>0.0.1</version>
  <description>robot track ar code by Shenzhen Reinovo Technology Co., Ltd
  </description>
  <maintainer email="msnakes@qq.com">zq</maintainer> 
  <license>AGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>relative_move</build_depend>
  <build_depend>ar_track_alvar_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- <exec_depend: 生成python所需依赖> -->
  <exec_depend>message_runtime</exec_depend>
</package>
