<?xml version="1.0"?>
<package format="2">
  <name>auto_charging</name>
  <version>0.0.1</version>
  <description>robot auto charging by Shenzhen Reinovo Technology Co., Ltd
  </description>
  <maintainer email="msnakes@qq.com">zq</maintainer> 
  <license>AGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>ar_pose</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>relative_move</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rei_robot_base</build_depend>
  
  <!-- <exec_depend: 生成python所需依赖> -->
  <exec_depend>message_runtime</exec_depend>
</package>
