<package format="2">
  <name>bobac3_description</name>
  <version>0.0.1</version>
  <description>bobac3 description by Shenzhen Reinovo Technology Co., Ltd
  </description>
  <maintainer email="msnakes@qq.com">zq</maintainer> 
  <license>AGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>