<?xml version="1.0"?>
<package format="2">
  <name>bobac3_navigation</name>
  <version>0.0.1</version>
  <description>bobac3 navigation by Shenzhen Reinovo Technology Co., Ltd
  </description>
  <maintainer email="msnakes@qq.com">zq</maintainer> 
  <license>AGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>amcl</exec_depend>
  <exec_depend>bobac3_description</exec_depend>
  <exec_depend>map_manager</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>

</package>
