<?xml version="1.0"?>
<package format="2">
  <name>face_rec</name>
  <version>0.0.1</version>
  <description>face rec by Shenzhen Reinovo Technology Co., Ltd
  </description>
  <maintainer email="liuyuhang0531@foxmail.com">lyh</maintainer> 
  <license>AGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
