<?xml version="1.0"?>
<package format="2">
  <name>map_manager</name>
  <version>0.0.1</version>
  <description>map manager code by Shenzhen Reinovo Technology Co., Ltd
  </description>
  <maintainer email="liuyuhang0531@foxmail.com">lyh</maintainer> 
  <license>AGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cartographer_ros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
