<?xml version="1.0"?>
<package format="2">
  <name>pid_lib</name>
  <version>0.0.1</version>
  <description>PID Algorithm Library by Shenzhen Reinovo Technology Co., Ltd
  </description>
  <maintainer email="msnakes@qq.com">zq</maintainer> 
  <license>AGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

</package>
