<?xml version="1.0"?>
<package format="2">
  <name>rei_lidar_fuse</name>
  <version>0.0.1</version>
  <description>fuse lidar data by Shenzhen Reinovo Technology Co., Ltd
  </description>
  <maintainer email="msnakes@qq.com">zq</maintainer> 
  <license>AGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>laser_geometry</build_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_lidar_fuse.xml"/>
  </export>
</package>
