<?xml version="1.0"?>
<package format="2">
  <name>relative_move</name>
  <version>0.0.1</version>
  <description>robot relative_move code by Shenzhen Reinovo Technology Co., Ltd
  </description>
  <maintainer email="msnakes@qq.com">zq</maintainer> 
  <license>AGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>pid_lib</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>pid_lib</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>pid_lib</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
