<?xml version="1.0"?>
<package format="2">
  <name>robot_audio</name>
  <version>0.0.1</version>
  <description>robot audio by Shenzhen Reinovo Technology Co., Ltd
  </description>
  <maintainer email="fanlongjiayou@163.com">fll</maintainer> 
  <license>AGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>ar_pose</build_depend>
  <build_depend>relative_move</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>ar_pose</exec_depend>
  <exec_depend>relative_move</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
